WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197443
Safe browsing warning should update colors when a user switches between light and dark appearance
https://bugs.webkit.org/show_bug.cgi?id=197443
Summary
Safe browsing warning should update colors when a user switches between light...
Alex Christensen
Reported
2019-04-30 16:33:51 PDT
Safe browsing warning should update colors when a user switches between light and dark appearance
Attachments
Patch
(9.45 KB, patch)
2019-04-30 16:34 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(6.90 KB, patch)
2019-04-30 16:42 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(6.92 KB, patch)
2019-04-30 17:34 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(6.99 KB, patch)
2019-05-01 16:24 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2019-04-30 16:34:18 PDT
Created
attachment 368626
[details]
Patch
Alex Christensen
Comment 2
2019-04-30 16:42:11 PDT
Created
attachment 368630
[details]
Patch
Tim Horton
Comment 3
2019-04-30 17:09:28 PDT
Comment on
attachment 368630
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=368630&action=review
> Source/WebKit/UIProcess/Cocoa/WKSafeBrowsingWarning.mm:200 >
This should be inside a PLATFORM(MAC)
Alex Christensen
Comment 4
2019-04-30 17:34:51 PDT
Created
attachment 368634
[details]
Patch
Alex Christensen
Comment 5
2019-05-01 16:24:56 PDT
Created
attachment 368731
[details]
Patch
Alex Christensen
Comment 6
2019-05-02 10:38:19 PDT
http://trac.webkit.org/r244875
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug